--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
 	<script type="text/javascript" src="js/jquery.isotope.js"></script>
 	<script type="text/javascript" src="js/wow.js"></script>
 	<script type="text/javascript" src="js/classie.js"></script>
-    
-    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a4d02db3b93df0013cb563a&product=inline-share-buttons"></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112043201-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-112043201-1');
+	</script>
+	
+    	<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a4d02db3b93df0013cb563a&product=inline-share-buttons"></script>
 
 </head>
 
