--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="credits">
-                Made with &hearts; by <a href="https://www.github.com/brandongoldman">Brandon Goldman</a>
+                &copy; 2018. All Rights Reserved.</a>
 			</div>
-            <span class="copyright">&copy; 2018. We not make any guarantee or other promise as to any results that may be obtained from using our content. No one should make any investment decision without first consulting his or her own financial advisor and conducting his or her own research and due diligence. </span>
+            <span class="copyright">We not make any guarantee or other promise as to any results that may be obtained from using our content. No one should make any investment decision without first consulting his or her own financial advisor and conducting his or her own research and due diligence. </span>
 		</div>
 	</footer>
 
